tenant-manager-backend/k8s/deploy.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: saas-boutique

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tenant-controller-mysql-db
  namespace: saas-boutique
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-store
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-store
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi

---

apiVersion: v1
kind: Service
metadata:
  name: tenant-controller-db-service
  namespace: saas-boutique
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-manager-backend
  namespace: saas-boutique
  labels:
    app.kubernetes.io/name: tenant-manager-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tenant-manager-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tenant-manager-backend
    spec:
      serviceAccountName: tenant-controller-sa
      containers:
        - name: tenant-manager-backend
          image: quay.io/jnirosha/tenant-manager-backend:latest
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: tenant-controller-service
  namespace: saas-boutique
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tenant-manager-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tenant-controller-route
  namespace: saas-boutique
spec:
  to:
    kind: Service
    name: tenant-controller-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
